[package]
name = "previuwu"

version = "0.0.0"
edition = "2021"
authors = ['Arijit Basu <hi@arijitbasu.in>']
description = 'An all-in-one preview window for the furries'
license = 'MIT OR Apache-2.0'
readme = 'README.md'
repository = 'https://github.com/sayanarijit/previuwu'
homepage = 'https://github.com/sayanarijit/previuwu'
keywords = ['preview', 'render', 'display', 'files']
categories = ['gui', 'rendering', 'filesystem']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.14", features = ["derive"] }
eframe = "0.18.0"
egui = "0.18.1"
egui_extras = { version = "0.18.0", features = ["image", "svg"] }
image = "0.24.3"
mime_guess = "2.0.4"
